# agentic-rag-learning-system

./: .gitignore  README.md  demo_output.txt  learcon.txt  pyproject.toml
deploy/: docker-compose.yml
scripts/: demo_agent.py  evaluate_retrieval.py  verify_extension.py
src/app/: main.py  worker.py
src/app/api/: chat.py  ingestion.py  search.py
src/app/core/: config.py
src/domain/chat/: agent.py  guardrails.py  models.py  tools.py
src/domain/documents/: exceptions.py  models.py  parser.py
src/domain/documents/chunking/: advanced_strategies.py  base.py  factory.py  strategies.py
src/infrastructure/db/: qdrant.py  registry.py
src/infrastructure/llm/: embeddings.py
src/services/: ingestion.py  retrieval.py
tests/unit/: test_agent.py  test_ingestion.py  test_parser.py
