[project]
name = "rag-master-project"
version = "0.1.0"
description = "Production-grade Agentic Document Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "qdrant-client>=1.12.0",
    "docling>=2.4.0",
    "litellm>=1.52.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.12",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.3",
    "sentence-transformers>=3.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
ignore_missing_imports = true
